--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,8 @@
         <deploy>${project.artifactId}-${project.version}</deploy>
         <!-- Maven -->
         <maven.compiler.version>3.6.2</maven.compiler.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
         <!-- Maven. Test de Integración -->
         <maven-surefire-plugin.version>2.21.0</maven-surefire-plugin.version>
